# normandeau

./: .clang-format  .gitignore  .hgignore  .sdkmanrc  Instructions.md  README.md  build.gradle  meson.build
src/backend/cpp/: check.cpp  code_sequence.cpp  code_type.cpp  cover.cpp  division.cpp  equations.cpp  evaluator.cpp  general.cpp  inequalities.cpp  parse.cpp  region.cpp  shooting_vectors.cpp  trig_identities.cpp  unfolding.cpp  util.cpp  verify.cpp  wrapper.cpp
src/backend/cpp/math/: symbols.cpp
src/backend/headers/: check.hpp  code_sequence.hpp  code_type.hpp  cover.hpp  division.hpp  equations.hpp  evaluator.hpp  general.hpp  inequalities.hpp  initial_angles.hpp  numbers.hpp  parse.hpp  progress.hpp  region.hpp  shooting_vectors.hpp  trig_identities.hpp  unfolding.hpp  util.hpp  verify.hpp  wrapper.hpp
src/backend/headers/geometry/: algorithms.hpp  convex_polygon.hpp  interval.hpp  point.hpp  project.hpp  rectangle.hpp  segment.hpp  test  test.cpp  types.hpp
src/backend/headers/math/: arith.hpp  lin_com_arr.hpp  lin_com_map.hpp  lin_com_vec.hpp  monomial.hpp  polynomial.hpp  symbols.hpp  trig.hpp
src/cover/cpp/: main.cpp
src/java/billiards/codeseq/: CodePair.java  CodeSequence.java  CodeType.java  InitialAngles.java  TriplePair.java
src/java/billiards/geometry/: ConvexPolygon.java  Interval.java  LineSegment.java  Location.java  Point.java  Project.java  Rectangle.java
src/java/billiards/math/: CosEquation.java  CoverSquare.java  Equation.java  LinCom.java  MathUtils.java  SinEquation.java  XYEta.java  XYZ.java
src/java/billiards/viewer/: BackwardForward.java  ColorPicker.java  Colors.java  Console.java  Cover.java  ErrorAlert.java  HashTriple.java  InfoWindow.java  Main.java  PixelRadianMap.java  Progress.java  Storage.java  Utils.java  Viewer.java
src/java/billiards/wrapper/: CCodeInfo.java  CodeInfo.java  Wrapper.java
src/test/cpp/: main.cpp
src/test/headers/: bounding_region_test.hpp  code_sequence_test.hpp  division_test.hpp  general_test.hpp  gradient_test.hpp  parse_test.hpp  shooting_angles_test.hpp  trig_identities_test.hpp
src/test/java/billiards/codeseq/: CodeSequenceTest.java
